left and right alignment fixed

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 body {
     margin-top: 12vh;
-    margin-left: 13%;
-    margin-right: 13%;
+    margin-left: 15vh;
+    margin-right: 15vh;
     background-image: linear-gradient(120deg,
         rgb(229, 255, 0) 0%,
         rgb(0, 183, 255) 100% 
